--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ body{
     border: 1px solid green;
     text-align: center;
     margin: 0 auto;
+    justify-content: space-between;
+    /*
+    Justify-content sur le parent
+        Contrôle l'alignement horizontal des éléments flexibles dans le conteneur. Les valeurs possibles sont flex-start (par défaut), flex-end, center, space-between et space-around. Ici j'utilise space-between pour avoir un élément qui colle à gauche (main) et un élément qui colle à droite c'est l'aside.
+*/
 
 }
 
@@ -54,6 +59,8 @@ aside{
     max-width: 332px;
     border: 3px solid goldenrod;
     height: calc(100vh-(332px-140px));
+    
+    
 }
 
 /* FOOTER + voir feuille de style propre */
